[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cbsr"
authors = [{name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}, {name="Antonio Carnevali"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    ]
dynamic = ["version", "description"]

dependencies = ["crabnet", "pymatgen", "matbench"]

requires-python = ">=3.7,<3.10"

[project.urls]
Home = "https://github.com/sparks-baird/cbsr"
